# rust-ebpf-test

./: .gitignore  AGENTS.md  CHANGES_SUMMARY.md  Cargo.toml  DEBUG_GUIDE.md  FILENAME_PREVIEW_FIX.md  JSON_FORMAT_SUMMARY.md  README.md  bpftool_7.7.0+6.17.0-3.3_amd64.deb  check_environment.sh  test_file_operations.sh
dirt/: Cargo.toml  Settings.toml  config.json
dirt-common/: Cargo.toml
dirt-common/src/: lib.rs
dirt-ebpf/src/: main.rs
dirt/.cargo/: config.toml
dirt/dirt/: Cargo.toml  build.rs
dirt/dirt-common/: Cargo.toml
dirt/dirt-common/src/: lib.rs
dirt/dirt-ebpf/: Cargo.toml  build.rs
dirt/dirt-ebpf/.cargo/: config.toml
dirt/dirt-ebpf/src/: lib.rs  main.rs  maps.rs  types.rs  vmlinux.h  vmlinux.rs
dirt/dirt/src/: main.rs
dirt/src/: main.rs
old_dirt/: dirt.bpf.c  dirt.c  dirt.h
