[workspace]
resolver = "2"
members = [
    "dirt-ebpf",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
aya-ebpf = "0.1.1"
which = "6.0.3"

[profile.dev]
opt-level = 1
debug = 1
overflow-checks = false

[profile.release]
opt-level = 2
debug = 1
lto = "fat"
codegen-units = 1
overflow-checks = false
