[package]
name = "dirt-common"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[features]
default = []
user = ["aya", "serde"]

[dependencies]
aya = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }

[lib]
path = "src/lib.rs"
