[package]
name = "dirt"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dirt-common = { path = "../dirt-common", features = ["user"] }

anyhow = { workspace = true }
aya = { workspace = true }
bytes = { workspace = true }
libc = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
which = { workspace = true }
